Archive2/43/ba5b62f2a3476e/output
+ clang++ --std=gnu++11 main.cpp
main.cpp:24:1: warning: extraneous template parameter list in template specialization
template<>
^~~~~~~~~~
main.cpp:26:15: error: out-of-line definition of 'fn' does not match any declaration in 'Foo'
    void Foo::fn(myT t, V const & v)
              ^~
1 warning and 1 error generated.
